gengo/tests/snapshots/analyzers_tests__by_filepath_json_with_comments.snap
---
source: gengo/tests/analyzers_tests.rs
expression: results
---
[
    Analyzer {
        language: Language {
            name: "JSON",
            category: Data,
            color: "#000000",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [],
        priority: 50,
    },
    Analyzer {
        language: Language {
            name: "JSON with Comments",
            category: Data,
            color: "#FFFFFF",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                        "jsonc",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [
            Regex(
                "^(?m)\\s*?//",
            ),
        ],
        priority: 50,
    },
]
