gengo/tests/snapshots/analyzers_tests__by_shebang_shell.snap
---
source: gengo/tests/analyzers_tests.rs
expression: results
---
[
    Analyzer {
        language: Language {
            name: "Shell",
            category: Programming,
            color: "#aabbcc",
        },
        matchers: [
            Shebang(
                ShebangMatcher {
                    interpreters: {
                        "sh",
                        "bash",
                    },
                },
            ),
        ],
        heuristics: [],
        priority: 50,
    },
]
