gengo/tests/snapshots/analyzers_tests__check_json_with_comments.snap
---
source: gengo/tests/analyzers_tests.rs
expression: results
---
[
    (
        Language {
            name: "JSON",
            category: Data,
            color: "#000000",
        },
        [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
    ),
    (
        Language {
            name: "JSON with Comments",
            category: Data,
            color: "#FFFFFF",
        },
        [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                        "jsonc",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
    ),
]
